* NEW : Recent and random images can be taken from a specific gallery using the id=x parameter in the shortcode
* NEW : Recent images can be recent by exif date (instead of databse id) by using the mode=recentdate parameter in the shortcode
* NEW : Introduce the WP_Object_cache and meta_data
* NEW : Various new hooks and filters
* Added : New link parameter for the singlepic shortcode : [singlepic id=x w=x h=x link="http://google.com"]
* Added : New template gallery-carousel
* Added : New id parameter for recent and random shortcodes : [random max="7" template="filename" id="2"] takes only pictures from the gallery with id=2
* Added : New mode paramenter for recent shortcode : [recent max="7" template="filename" id="3" mode="date" /] where mode can be one of (id, date, sort). Recent pictures are delivered by addition to database (id), exif date (date) or user sort order (sort).
* Changed : Added option to link an album with a page id
* Changed : Support templates for child themes, use STYLESHEETPATH instead TEMPLATEPATH (THX to Prollius)
* Bugfix : Check capability to create a new page
* Bugfix : Fix double call of filter name , changed to ngg_picturelist_object (THX to Prollius)
* Bugfix : Check for a deleted gallery in a album

= V1.3.5 - 17.07.2009 =
* Bugfix : Fixed XSS issue for Page title

= V1.3.4 - 07.07.2009 =
* Added : New filter ngg_gallery_object and ngg_image_object
* Bugfix : Fix double rendering of a gallery if two album shortcodes are used
* Bugfix : Fix for custom field ngg_gal_sort
* Bugfix : Changed capability check for upload 
* Bugfix : Check for correct version OR memory limit

= V1.3.3 - 11.06.2009 =
* Changed : Load Thickbox images via wp_footer()
* Bugfix  : Widget setting couldnot be saved

= V1.3.2 - 10.06.2009 =
* Changed  : Resize maximum to 1280 x 1280 with nggshow (THX to onezero)
* Bugfix : Bugfix for Multifile upload
* Bugfix : Bugfix for sortorder under jQuery 1.3
* Bugfix : Workaround for more albums per page, need more rework