@@ -180,6 +180,7 @@ class nggGallery {
 				'ngg_gal_ShowSlide'			=> 'galShowSlide',
 				'ngg_gal_ShowPiclense'		=> 'usePicLens',
 				'ngg_gal_ImageBrowser' 		=> 'galImgBrowser',
+				'ngg_gal_HideImages' 		=> 'galHiddenImg',
 				'ngg_ir_Shuffle' 			=> 'irShuffle',
 				'ngg_ir_LinkFromDisplay' 	=> 'irLinkfromdisplay',
 				'ngg_ir_ShowNavigation'		=> 'irShownavigation',
