@@ -224,21 +224,36 @@ function nggCreateGallery($picturelist, $galleryID = false, $template = '', $ima
         $start = $offset = ( $page - 1 ) * $maxElement;
         
         $total = count($picturelist);
-        
-        // remove the element if we didn't start at the beginning
-        if ($start > 0 ) 
-            array_splice($picturelist, 0, $start);
-        
-        // return the list of images we need
-        array_splice($picturelist, $maxElement);
+
+		//we can work with display:hidden for some javascript effects
+        if (!$ngg_options['galHiddenImg']){
+	        // remove the element if we didn't start at the beginning
+	        if ($start > 0 ) 
+	            array_splice($picturelist, 0, $start);
+	        
+	        // return the list of images we need
+	        array_splice($picturelist, $maxElement);
+        }
 
         $nggNav = new nggNavigation;    
         $navigation = $nggNav->create_navigation($page, $total, $maxElement);
     } else {
         $navigation = '<div class="ngg-clear">&nbsp;</div>';
-    }   
-
+    } 
+	  
+    //we cannot use the key as index, cause it's filled with the pid
+	$index = 0;
     foreach ($picturelist as $key => $picture) {
+		
+		//need for hidden images (THX to Sweigold for the main idea at : http://wordpress.org/support/topic/228743/ )
+  		if ( ( ($index < $start) || ($index > ($start + $maxElement)) ) && $ngg_options['galHiddenImg'] ){
+			$picturelist[$key]->hidden  = true;	
+			$picturelist[$key]->display = 'style="display: none"';  //if out of range, hide image
+		} else {
+		  	$picturelist[$key]->hidden  = false;	
+			$picturelist[$key]->display = '';  //otherwise, show it
+  		}
+  		$index++;
 
         // get the effect code
         if ($galleryID)
