@@ -8,6 +8,7 @@ by Alex Rabe & NextGEN DEV Team
 * NEW : Recent images can be recent by exif date (instead of databse id) by using the mode=recentdate parameter in the shortcode
 * NEW : Introduce the WP_Object_cache and meta_data
 * NEW : Various new hooks and filters
+* Added : New option to add hidden images. Needed to show all images in a modal window (Thickbox, Lightbox et.)
 * Added : New link parameter for the singlepic shortcode : [singlepic id=x w=x h=x link="http://google.com"]
 * Added : New template gallery-carousel
 * Added : New id parameter for recent and random shortcodes : [random max="7" template="filename" id="2"] takes only pictures from the gallery with id=2
